# DeepShapeOpt

./: .gitignore  CITATION.cff  LICENSE  README.md  data_manifest.json  pyproject.toml
data/shapes/: cube_l1.stl  cube_l3.stl  cube_with_cylinders.stl  cube_with_holes.stl  ship_propeller.stl
deepshapeopt/: analysis.py  config.py  domain_frame.py  foam_utils.py  geometry_constraints.py  latent_pca.py  logging.py  mesh.py  mlflow_runner.py  parameters.py  plotting_utils.py  reconstruction.py  runtime.py  shape_optimization.py
deepshapeopt/hexmesh/: __init__.py  caps.py  constraints.py  foamwriter.py  lattice.py  octree.py  patches.py  pipeline.py  polymesh.py  sdf_field.py  snap.py  trimesh_sdf.py
deepshapeopt/latent_gui/: README.md  __init__.py  backend.py  server.py
deepshapeopt/latent_gui/static/: index.html
experiments/drag_cube/: config_ffd_cube_with_cylinders_5x5x5.json  config_ffd_cube_with_cylinders_7x7x7.json  config_latent_cube.json  config_latent_cube_with_cylinders.json  config_latent_cube_with_holes.json  config_sdfhex_validation.json  config_snappy_validation.json
scripts/: check_gradient_fd.py  check_min_steg_fd.py  check_undercut_fd.py  latent_gui.py  optimize_drag_ffd.py  optimize_drag_latent.py  pca_reconstruction_study.py  reconstruct.py  train_latent_field.py
tests/: mesh_functions.py  test_hexmesh.py  test_hexmesh_internal.py  test_mesh_stitching.py
tests/test_stitch_output/: boxcut_inner.stl  boxcut_inner_boundary_edges.stl  boxcut_original.stl  boxcut_outer_boundary_edges.stl  boxcut_outer_uncapped.stl  boxcut_stitched.stl
(+40 files in other folders)
