[project]
name = "DeepShapeOpt"
version = "1.0.0"
description = "Neural implicit geometry representation framework for shape optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "DeepSDFStruct",
    "embreex>=4.4.0",
    "foamlib>=1.3.13",
    "gmsh>=4.15.0",
    "libigl>=2.6.0",
    "manifold3d>=3.3.2",
    "mlflow>=3.6.0",
    "numpy-stl>=3.2.0",
    "shapely>=2.0",
    "torchmesh>=0.1.0",
    "trimesh>=4.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deepshapeopt*"]
exclude = ["old*", "results*", "foam_cases*", "experiments*"]

[tool.uv.sources]
DeepSDFStruct = { path = "../DeepSDFStruct", editable = true }
